# OpticApro-G4-11_1

./: CMakeLists.txt  GNUmakefile  LICENSE  OpticApro.cc  README-processes.md  README.md  run1.mac  run2.mac  vis.mac
include/: ActionInitialization.hh  DetectorConstruction.hh  EventAction.hh  PrimaryGeneratorAction.hh  PrimaryGeneratorMessenger.hh  Run.hh  RunAction.hh  StackingAction.hh  SteppingAction.hh  TrackingAction.hh
src/: ActionInitialization.cc  DetectorConstruction.cc  EventAction.cc  PrimaryGeneratorAction.cc  PrimaryGeneratorMessenger.cc  Run.cc  RunAction.cc  StackingAction.cc  SteppingAction.cc  TrackingAction.cc
